--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,22 +1,19 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
-
+ 
 on:
   push:
     branches: [ "main" ]
-
+ 
 jobs:
   build:
-
+ 
     runs-on: self-hosted
-
+ 
     strategy:
       matrix:
         node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+ 
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -25,5 +22,35 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+      env:
+        PORT: ${{ secrets.PORT }}
+        DB: ${{ secrets.DB }}
+        JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
+        OTP_AUTHID: ${{ secrets.OTP_AUTHID }}
+        OTP_TOKEN: ${{ secrets.OTP_TOKEN }}
+        S3_ACCESSKEY_KEY: ${{ secrets.S3_ACCESSKEY_KEY }}
+        S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
+        S3_BUCKET_REGION: ${{ secrets.S3_BUCKET_REGION }}
+        S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
     - run: npm run build --if-present
-    - run: npm restart backend
+      env:
+        PORT: ${{ secrets.PORT }}
+        DB: ${{ secrets.DB }}
+        JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
+        OTP_AUTHID: ${{ secrets.OTP_AUTHID }}
+        OTP_TOKEN: ${{ secrets.OTP_TOKEN }}
+        S3_ACCESSKEY_KEY: ${{ secrets.S3_ACCESSKEY_KEY }}
+        S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
+        S3_BUCKET_REGION: ${{ secrets.S3_BUCKET_REGION }}
+        S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+    - run: npm test
+      env:
+        PORT: ${{ secrets.PORT }}
+        DB: ${{ secrets.DB }}
+        JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
+        OTP_AUTHID: ${{ secrets.OTP_AUTHID }}
+        OTP_TOKEN: ${{ secrets.OTP_TOKEN }}
+        S3_ACCESSKEY_KEY: ${{ secrets.S3_ACCESSKEY_KEY }}
+        S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
+        S3_BUCKET_REGION: ${{ secrets.S3_BUCKET_REGION }}
+        S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
