--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,7 +43,7 @@ jobs:
         S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
         S3_BUCKET_REGION: ${{ secrets.S3_BUCKET_REGION }}
         S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-    - run: npm test
+    - run: pm2 restart backend
       env:
         PORT: ${{ secrets.PORT }}
         DB: ${{ secrets.DB }}
