--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,17 +1,24 @@
+[12:52 pm] Rakshit Tiwari
 name: Node.js CI
-
+ 
 on:
+
   push:
+
     branches: [ "main" ]
  
 jobs:
+
   build:
- 
+
     runs-on: self-hosted
- 
+
     strategy:
+
       matrix:
+
         node-version: [20.x]
+
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
  
     steps:
@@ -21,6 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+ 
     - run: npm ci
       env:
         PORT: ${{ secrets.PORT }}
@@ -32,6 +40,7 @@ jobs:
         S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
         S3_BUCKET_REGION: ${{ secrets.S3_BUCKET_REGION }}
         S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+ 
     - run: npm run build --if-present
       env:
         PORT: ${{ secrets.PORT }}
@@ -43,11 +52,11 @@ jobs:
         S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
         S3_BUCKET_REGION: ${{ secrets.S3_BUCKET_REGION }}
         S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+ 
     - run: pm2 restart backend
       env:
         PORT: ${{ secrets.PORT }}
         DB: ${{ secrets.DB }}
-        echo "DB length: ${$DB}"
         JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
         OTP_AUTHID: ${{ secrets.OTP_AUTHID }}
         OTP_TOKEN: ${{ secrets.OTP_TOKEN }}
@@ -55,3 +64,6 @@ jobs:
         S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
         S3_BUCKET_REGION: ${{ secrets.S3_BUCKET_REGION }}
         S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+ 
+    - name: Print Database URI
+      run: echo "Database URI: $DB"
