--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,8 +30,8 @@ jobs:
         echo JWT_TOKEN=${{secrets.JWT_TOKEN}} >> .env
         echo OTP_AUTHID=${{secrets.OTP_AUTHID}} >> .env
         echo OTP_TOKEN=${{secrets.OTP_TOKEN}} >> .env
-        echo S3_ACCESSKEY_KEY${{secrets.S3_ACCESSKEY_KEY}} >> .env
-        echo S3_SECRET_KEY${{secrets.S3_SECRET_KEY}} >> .env
+        echo S3_ACCESSKEY_KEY=${{secrets.S3_ACCESSKEY_KEY}} >> .env
+        echo S3_SECRET_KEY=${{secrets.S3_SECRET_KEY}} >> .env
         echo S3_BUCKET_REGION=${{secrets.S3_BUCKET_REGION}} >> .env
         echo S3_BUCKET_NAME${{secrets.S3_BUCKET_NAME}} >> .env
     - run: pm2 restart backend
