--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,8 +24,8 @@ jobs:
     - run: npm ci
     - run: |
         touch .env
-        echo DB=${{ secrets.DB }} >> .env
         echo "DB=${{secrets.DB}}"
+        echo DB=${{ secrets.DB }} >> .env
         echo PORT=${{secrets.PORT}} >> .env
         echo JWT_TOKEN=${{secrets.JWT_TOKEN}} >> .env
         echo OTP_AUTHID=${{secrets.OTP_AUTHID}} >> .env
@@ -34,4 +34,5 @@ jobs:
         echo S3_SECRET_KEY=${{secrets.S3_SECRET_KEY}} >> .env
         echo S3_BUCKET_REGION=${{secrets.S3_BUCKET_REGION}} >> .env
         echo S3_BUCKET_NAME${{secrets.S3_BUCKET_NAME}} >> .env
+        cat .env
     - run: pm2 restart backend
