--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
     - run: |
         touch .env
         echo "DB=${{secrets.DB}}"
-        echo DB=${{ secrets.DB }} >> .env
+        echo DB="${{ secrets.DB }}" >> .env
         echo PORT=${{secrets.PORT}} >> .env
         echo JWT_TOKEN=${{secrets.JWT_TOKEN}} >> .env
         echo OTP_AUTHID=${{secrets.OTP_AUTHID}} >> .env
