--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,4 @@ jobs:
           echo "S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}" >> .env
       - name: Run Docker Container
         run: sudo docker run -d -p 4000:4000 --restart=always --name nodejs_backend-container --env-file .env lepakshia/nodejs_backend
+             sudo docker logs -f nodejs_backend-container
