--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,10 @@ jobs:
           echo "S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}" >> .env
       - name: Run Docker Container
         run: sudo docker run -d -p 4000:4000 --restart=always --name nodejs_backend-container --env-file .env lepakshia/nodejs_backend
-             sudo docker logs -f nodejs_backend-container
+
+  watch-logs:
+     needs: deploy
+     runs-on: self-hosted
+     steps:
+       - name: Watch Docker Logs
+         run: docker logs -f nodejs_backend-container
