--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,9 @@ jobs:
       - name: Run Docker Container
         run: sudo docker run -d -p 4000:4000 --restart=always --name nodejs_backend-container --env-file .env lepakshia/nodejs_backend
 
-  watch-logs:
-     needs: deploy
-     runs-on: self-hosted
-     steps:
-       - name: Watch Docker Logs
-         run: sudo docker logs -f nodejs_backend-container
+  # watch-logs:
+  #    needs: deploy
+  #    runs-on: self-hosted
+  #    steps:
+  #      - name: Watch Docker Logs
+  #        run: sudo docker logs -f nodejs_backend-container
